--- a/client/src/App.css
+++ b/client/src/App.css
@@ -192,7 +192,7 @@
   padding: 5rem 2rem;
   width: 50%;
   position: absolute;
-  top:60%;
+  top:50%;
   left: 50%;
   transform: translate(-50%,-50%);
   display: flex;
@@ -293,6 +293,10 @@
 }
 
 .hideAddMenu{
+  display: none;
+}
+
+.showerrormessage{
   display: none;
 }
 
