--- a/client/src/App.css
+++ b/client/src/App.css
@@ -151,11 +151,16 @@
   display: flex;
 }
 .item-pic{
-  width: 100px;
-  height: 100px;
+  width: 120px;
+  height: 120px;
   background-color: #F28C28;
   margin-right: 1rem;
   border-radius: 3px;
+}
+
+.item-pic img{
+  width: 100%;
+  height: 100%;
 }
 .item-content h4{
   margin-bottom: .5rem;
@@ -184,13 +189,24 @@
 
 
 
+.menubackground{
+  display: block;
+  position:fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  max-width: 100%;
+  height:100vh;
+  background: rgba(51, 170, 51, .1)
+}
+
 .addmenuitem-container{
   background-color: #181818;
   border: 2px solid black;
   border-radius: 10px;
   margin-top: 2rem;
   padding: 5rem 2rem;
-  width: 50%;
+  width: 60%;
   position: absolute;
   top:50%;
   left: 50%;
@@ -199,24 +215,21 @@
 }
 
 .image{
-  width: 100px;
-  height:100px;
+  width: 120px;
+  height:120px;
   border-radius:50%;
   border: 5px solid #F28C28;
   display: flex;
   align-items: center;
   justify-content: center;
   background-color: aliceblue;
-  margin-right: 3rem;
+  
 }
 
 .image i{
   
   font-size: 6rem;
   font-style: normal;
-}
-.select-sort{
-  margin-left: 2rem;
 }
 
 .select-category{
@@ -298,5 +311,23 @@
 
 .showerrormessage{
   display: none;
+}
+
+.profile-image-container{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 2rem 1rem; 
+}
+
+.profile-image-container input{
+  width: 70%;
+  margin-top: 1rem;
+}
+
+.image img{
+  width:100%;
+  height: 100%;
+  border-radius:50%;
 }
 
