--- a/client/src/App.css
+++ b/client/src/App.css
@@ -10,6 +10,7 @@
 
 .navigation-container {
   width: 100vw;
+  position: relative;
   max-width: 100%;
   background-color: #000000;
   display: flex;
@@ -602,26 +603,25 @@
   border-bottom: 1px solid gray;
 }
 
-.user-menu{
-  border-radius: 10px;
+.user-menu {
+  display: flex;
+  align-items: center;
+}
+
+.list-items {
   color: white;
-  position: absolute;
-  bottom: -125px;
-  right: -10px;
-  background-color: #181818;
-  width: 150px;
+  text-decoration: none;
 }
 
 .user-menu div {
-  padding: 1rem;
-  border-bottom:1px solid gray;
   cursor: pointer;
+  margin-left: 1rem;
 }
 
-.user-menu div:hover{
-  color: rgb(212, 209, 209);
-}
-
-.hide-user-menu{
-  display: none;
+.user-menu div:hover {
+  background-color: #F28C28;
+  color: black;
+  padding: .5rem 1rem;
+  border-radius: 8px;
+  transition: all .5s;
 }
